# hmpps-person-match-score

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-entrypoint.sh  docker-images.json  init-db.sh  load_test.py  new_requirements.txt  poetry.toml  pyproject.toml  renovate.json  requirements.txt  run.sh  wsgi.py
.circleci/: config.yml
.github/workflows/: pipeline.yml  sca.yml  security_snyk_scan.yml  security_trivy.yml  security_veracode_pipeline_scan.yml  security_veracode_policy_scan.yml
doc/adr/: 0002-splink-integration-options.md  0003-make-person-match-score-full-service.md
flaskr/: __init__.py
helm_deploy/: values-dev.yaml  values-preprod.yaml  values-prod.yaml
helm_deploy/hmpps-person-match-score/: Chart.yaml  values.yaml
hmpps_person_match_score/: __init__.py  ai.py  app.py  app_insights.py  conftest.py  db.py  log_formatter.py  match.py  model.json  spark.py  sql_functions.py  standardisation_functions.py
hmpps_person_match_score/domain/: events.py  roles.py  splink_models.py
hmpps_person_match_score/domain/constants/: error_messages.py
hmpps_person_match_score/model/: model.py  saved_model.json
hmpps_person_match_score/models/: error_response_model.py  person_match_model.py
hmpps_person_match_score/models/tests/: test_person_match_model.py
hmpps_person_match_score/splink_models/: person_match_model.json
hmpps_person_match_score/standardisation_functions/: fix_string.py  pnc_number.py
hmpps_person_match_score/utility_functions/: demo_utils.py
hmpps_person_match_score/utils/: auth.py  db_cleanup.py  environment.py  jwks.py  retry.py  standardisation_functions.py
hmpps_person_match_score/utils/tests/: test_auth.py  test_jwks.py  test_retry.py  test_standardisation_functions.py
hmpps_person_match_score/views/: base_view.py  health_view.py  info_view.py  match_view.py  person_match_view.py  ping_view.py
hmpps_person_match_score/views/tests/: conftest.py  test_health_view.py  test_info_view.py  test_match_view.py  test_person_match_view.py  test_ping_view.py
matcher/: __init__.py  db.py  match.py  model.py  sql_functions.py
tests/: conftest.py  test_dobs.py  test_fix_string.py  test_match.py  test_names.py  test_pnc.py
tests/.ipynb_checkpoints/: conftest-checkpoint.py  test_dobs-checkpoint.py  test_fix_string-checkpoint.py  test_pnc-checkpoint.py
