[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["Mark Berridge <mark.berridge@digital.justice.gov.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Metaphone = "^0.6"
numpy = "^1.21.2"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
six = "^1.16.0"
textdistance = "^4.2.1"
pandas = "^1.3.3"
Flask = "^2.1.1"
click = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"