[tool.poetry]
name = "hmpps-person-match-score"
version = "0.1.0"
description = ""
authors = ["Mark Berridge <mark.berridge@digital.justice.gov.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Metaphone = "^0.6"
numpy = "^1.21.2"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
six = "^1.16.0"
splink = "^3.4.0"
pandas = "^1.3.3"
Flask = "^2.1.1"
click = "^8.1.2"
duckdb = "0.10.0"
gunicorn = "^20.1.0"
opencensus-ext-azure = "^1.1.5"
opencensus-ext-flask = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
dummy-variable-rgx = "^_$"
select = [
    # pycodestyle
    "E",
    "W",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-2020
    "YTT",
    # flake8-blind-except
    "BLE",
    # flake8-bandit
    "S",
    # flake8-quotes
    "Q",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-no-pep420
    "INP",
    # flake8-pie
    "PIE",
    # flake8-self
    "SLF",
    # isort
    "I",
    # pylint
    "PL",
]
ignore = [
    # magic-value-comparison
    "PLR2004"
]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `S: flake8-bandit` in all `test_*.py` files.
"test_*.py" = ["S"]