[tool.poetry]
name = "hmpps-person-match-score"
version = "0.1.0"
description = ""
authors = ["Mark Berridge <mark.berridge@digital.justice.gov.uk>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
Metaphone = "^0.6"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
six = "^1.16.0"
splink = "^3.9.13"
duckdb = "^0.10.0"
pandas = "^2.0.0"
pyarrow = "^15.0.2"
Flask = "^2.1.1"
click = "^8.1.2"
gunicorn = "^20.1.0"
opencensus-ext-azure = "^1.1.5"
opencensus-ext-flask = "^0.8.0"
numpy = "1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
dummy-variable-rgx = "^_$"
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
